--- a/Jobsheet_09.ipynb
+++ b/Jobsheet_09.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "name": "Jobsheet_09.ipynb",
       "mount_file_id": "1nPpjwyEBYOG-7OWM9T7ZVawOv2lTTLAV",
-      "authorship_tag": "ABX9TyPd+ryITBrgSu2HHK0OgdP9",
+      "authorship_tag": "ABX9TyNcL7KhV5F2qiF935hWPcbv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,7 +392,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Penugasan 03: Modul Buatan Sendiri"
+        "#Penugasan 03: Modul sys"
+      ],
+      "metadata": {
+        "id": "RuBdCGzy1owd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sys import (platform, version)\n",
+        "\n",
+        "print(\"Platform: \", platform)\n",
+        "print(\"Versi : \", version)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6pWC7F_m14zw",
+        "outputId": "715a69ee-8d4e-420c-a2d1-820c7ef40c5d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Platform:  linux\n",
+            "Versi :  3.12.12 (main, Oct 10 2025, 08:52:57) [GCC 11.4.0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Penugasan 04: Modul Buatan Sendiri"
       ],
       "metadata": {
         "id": "sJmu09VFY2ds"
@@ -459,7 +495,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Penugasan 04: Instalasi Library Pihak Ketiga"
+        "#Penugasan 05: Instalasi Library Pihak Ketiga"
       ],
       "metadata": {
         "id": "OzqwNyRvc7uU"
@@ -862,7 +898,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Penugasan 05: Studi Kasus Nilai"
+        "#Penugasan 06: Studi Kasus Nilai"
       ],
       "metadata": {
         "id": "x3cVWvrLfoW8"
